# prospect

./: .gitignore  README.md  prospect.cabal  stack.yaml
src/: Battery.hs  ByteString.hs  Infinite.hs  Lib.hs  Main.hs  Parser.hs  RawFilePath.hs  Socket.hs
src/Touch/: Main.hs
