name:               prospect
version:            0.0.1
synopsis:           Status reporter for laptops
license:            AGPL-3
license-file:       LICENSE
author:             Keynoru
copyright:          Copyright (C) 2015 Keynoru
category:           System
build-type:         Simple
-- extra-source-files:
cabal-version:      >=1.18

executable prospect
  main-is:          Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    attoparsec == 0.*,
    hourglass == 0.*,
    process == 1.*,
    directory == 1.*,
    network == 2.*,
    bytestring == 0.10.*,
    base >=4.8 && <4.9
  hs-source-dirs:   src
  ghc-options: -threaded -Wall -O2
  default-language: Haskell2010

executable prospect-touch
  main-is:          Main.hs
  build-depends:
    network,
    base >=4.8 && <4.9
  hs-source-dirs:   src/Touch
  ghc-options: -Wall -O2
  default-language: Haskell2010
