name:               prospect
version:            0.1.0
synopsis:           Status reporter for laptops
description:        Please see README.md
license:            AGPL-3
license-file:       LICENSE
author:             Kinoru
maintainer:         xkinoru@gmail.com
copyright:          Copyright (C) 2016 Kinoru
category:           GUI
build-type:         Simple
-- extra-source-files:
cabal-version:      >=1.18

library
  hs-source-dirs:   src
  exposed-modules:
    Lib
  other-modules:
    RawFilePath
  build-depends:
    unix >= 2.7.1.0 && < 3,
    attoparsec >= 0.13.0.2 && < 0.14,
    bytestring >= 0.10 && < 0.11,
    base >= 4.7 && < 5
  default-language: Haskell2010
  default-extensions:
    LambdaCase,
    OverloadedStrings

executable prospect
  main-is:          Main.hs
--  other-modules:
--    Socket
  build-depends:
    prospect,
    base >=4.8 && <5
  hs-source-dirs:   app
  ghc-options: -threaded -Wall -O2
  default-language: Haskell2010
  default-extensions:
    LambdaCase,
    OverloadedStrings

--executable prospect-touch
--  main-is:          Main.hs
--  build-depends:
--    network,
--    base >=4.8 && <4.9
--  hs-source-dirs:   src/Touch
--  ghc-options: -Wall -O2
--  default-language: Haskell2010
